# openlipc

./: Doxyfile  Makefile.am  README.md  SYMBOLS.txt  configure.ac  dir_d44c64559bbebec7f509842c48db8b23.html  group__lipc-event.html  group__lipc-events.html  group__lipc-hasharray.html  group__lipc-init.html  group__lipc-log.html  group__lipc-logs.html  group__lipc-property.html  group__lipc-props.html  index.html  modules.html  openlipc_8h_source.html
include/: openlipc.h
src/: Makefile.am  lipc-get-prop.c  lipc-probe.c  lipc-set-prop.c
test/: Makefile.am  lipc-test-event.c  lipc-test-hasharray.c  lipc-test-init.c  lipc-test-prop.c
